--- a/settings/project.json
+++ b/settings/project.json
@@ -1,3 +1,4 @@
 {
-  "start-scene": "d99e5866-2147-494a-ba8c-9794d9a76345"
+  "start-scene": "d99e5866-2147-494a-ba8c-9794d9a76345",
+  "last-module-event-record-time": 1724050599440
 }
